LLGrammer.txt
<Prog> -> func <funcDef> <prog>
<Prog> -> <stmntList> <prog>
<Prog> -> EOF
<stmntList> -> e
<stmntList> -> <stmnt> <stmntList> 
<stmnt> -> let/var <varDef>
<stmnt> -> id <FuncCallOps>
<stmnt> -> if <Condition>
<stmnt> -> while <Loop>
<stmnt> -> <return> //only if in correct scope
<paramListFirst> -> e
<paramListFirst> -> <param> <paramList>
<paramList> -> e
<paramList> -> , <param> <paramList>
<param> -> id id : <Type>
<param> -> _ id : <Type>
<varDef> -> id <varDefOptional>  
<varDefOptional> -> : <Type> <varDefAssTyped>
<varDefOptional> -> <varDefAss>
<varDefAssTyped> -> e
<varDefAssTyped> -> <varDefAss>
<varDefAss> -> = <AssignOps>
<funcDef> -> id ( <paramListFirst> ) <funcRetType> { <stmntList> <return> }
<funcRetType> -> -> <Type>
<funcRetType> -> e
<FuncCallOps> ->   = <AssignOps>
<FuncCallOps> -> ( <InParamListFirst> )
<AssignOps> ->  <expr>
<AssignOps> -> id ( <InParamListFirst> )
<Condition> -> <condOps> { <stmntList> } else { <stmntList> }
<condOps> -> <expr>
<condOps> -> let id
<Loop> -> <expr> { <stmntList>}
<InParamListFirst> -> e
<InParamListFirst> -> <InParam> <InParamList>
<InParamList> -> , <InParam> <InParamList>
<InParamList> -> e
<InParam> -> id <opID>
<InParam> -> literal
<opID> -> : id
<return> -> <expr>
<expre> -> give away to expressions parser to handle 
<Type> -> Int/Int?
<Type> -> Double/Double?
<Type> -> String/String?
